--- a/cyagro-frontend/src/app/app.component.html
+++ b/cyagro-frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" class="app-toolbar">
-    <span class="logo">🌱 CyAgro</span>
+    <a routerLink="/dashboard" class="logo">🌱 CyAgro</a>
     <span class="spacer"></span>
   
     <a mat-button routerLink="/dashboard" routerLinkActive="active-link">
